# mit-scheme-kernel

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
examples/: example.ipynb  mechanics.ipynb  mit-scheme.ipynb  scmutils.ipynb
scripts/: run_tests.sh
src/mit_scheme_kernel/: __main__.py  _version.py  config.yaml  kernel.py  repl.py
src/mit_scheme_kernel/magics/: __init__.py  show_expression.py
tests/: test_kernel.py
