[project]
name = "mit-scheme-kernel"
dynamic = ['version']
description = "A MIT/GNU Scheme Jupyter kernel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["metakernel>=0.30.3", "pyyaml>=6.0.2"]

[project.optional-dependencies]
tests = ["pytest>=8.4.1", "pre-commit", "pytest-cov>=6.2.1"]
dev = ["ruff", "versioneer[toml]"]

[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-data]
mypackage = ["config.yaml"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true


[tool.ruff]
line-length = 179
indent-width = 4


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/mit_scheme_kernel/_version.py"
versionfile_build = "src/mit_scheme_kernel/_version.py"
tag_prefix = ""

[tool.pytest.ini_options]
testpaths = ["tests", "src/mit_scheme_kernel"]
python_files = ["test_*.py", "*_test.py", "test.py"]
addopts = "--cov=mit_scheme_kernel --cov-report=term-missing"
